--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -2,3 +2,31 @@
 body {
   background: #222;
   background-color: #222; }
+
+
+  /*********************************************
+   * HEADERS
+   *********************************************/
+  .reveal h1,
+  .reveal h2,
+  .reveal h3,
+  .reveal h4,
+  .reveal h5,
+  .reveal h6 {
+    color: #f48642;
+ }
+
+  .reveal h1 {
+    font-size: 2.11em; }
+
+  .reveal h2 {
+    font-size: 1.55em; }
+
+  .reveal h3 {
+    font-size: 1em; }
+
+  .reveal h4 {
+    font-size: 1em; }
+
+  .reveal h1 {
+    text-shadow: none; }
