--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -45,10 +45,8 @@ body {
 
 .reveal ul {
   list-style-type: disc;
-  color: #f48642;
 }
 
 .reveal ul ul {
-  list-style-type: square;
-  color: #f48642;
+  list-style-type: circle;
 }
