Update Header Colours & Sizes

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -38,7 +38,7 @@ body {
       width:46px;
       height:63px;
       margin-right:5px;
-      background-image:url("images/dropcap_e.gif");
+      background-image:url("../images/java-logo.png");
       background-repeat:no-repeat;
       }
 
