--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,51 +1,48 @@
 
 body {
   background: #222;
-  background-color: #222; }
+  background-color: #222;
+}
 
+/*********************************************
+ * HEADERS
+ *********************************************/
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+  color: #f48642;
+  text-transform: none;
+}
 
-  /*********************************************
-   * HEADERS
-   *********************************************/
-  .reveal h1,
-  .reveal h2,
-  .reveal h3,
-  .reveal h4,
-  .reveal h5,
-  .reveal h6 {
-    color: #f48642;
- }
+.reveal h1 {
+  font-size: 2.11em; }
 
-  .reveal h1 {
-    font-size: 2.11em; }
+.reveal h2 {
+  font-size: 1.55em; }
 
-  .reveal h2 {
-    font-size: 1.55em; }
+.reveal h3 {
+  font-size: 1em; }
 
-  .reveal h3 {
-    font-size: 1em; }
+.reveal h4 {
+  font-size: 1em; }
 
-  .reveal h4 {
-    font-size: 1em; }
+.reveal h1 {
+  text-shadow: none; }
 
-  .reveal h1 {
-    text-shadow: none; }
+.reveal blockquote {
+    width: 80%;
+}
 
-
-  .reveal blockquote {
-      width: 80%;
-  }
-
-  .reveal span.effective {
-      display:block;
-      float:left;
-      width:46px;
-      height:63px;
-      margin-right:5px;
-      background-image:url("../images/java-logo.png");
-      background-repeat:no-repeat;
-      }
-
+.reveal span.effective {
+    display:block;
+    float:left;
+    background-image:url("../images/java-logo.png");
+    background-repeat:no-repeat;
+    padding-left: 40px;
+}
 
 .reveal ul {
   list-style-type: disc;
